<resources>
    <string name="app_name">Covid-19 Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_deaths">Total deaths</string>
    <string name="world_cases">World Cases</string>
    <string name="world_recovered">Recovered</string>
    <string name="see_by_country">See by Country</string>
    <string name="home">Home</string>
    <string name="enter_search">Search...</string>
    <string name="casos">Cases:</string>
    <string name="total_cases">Total Cases</string>
    <string name="today_cases">Today Cases</string>
    <string name="deaths_detail">Deaths</string>
    <string name="today_deaths_detail">Today Deaths</string>
    <string name="active_cases">Active Cases</string>
    <string name="critical_cases">Critical Cases</string>
    <string name="cases_milion">Cases Per One Million</string>
    <string name="deaths_million">Deaths Per Million</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="info_country">List Country Info</string>
    <string name="detail_country">Country Info</string>
    <string name="global_info">World Info</string>

    <string name="search_title">Search by Country</string>

</resources>
